--- a/merchant_forms.html
+++ b/merchant_forms.html
@@ -13,17 +13,18 @@
     <main>
         <form>
             <label for="Merchant">Nome:</label>
-            <input type="text" id="Merchant" name="Name" placeholder="Nome Sobrenome" />
+            <input type="text" id="Merchant" name="Name" placeholder="Nome Sobrenome" required/>
             <label for="Merchant">Email:</label>
-            <input type="text" id="Merchant" name="Email" placeholder="example@email.com" />
+            <input type="text" id="Merchant" name="Email" placeholder="example@email.com" required/>
             <label for="Merchant">CPF:</label>
-            <input type="text" id="Merchant" name="Cpf" placeholder="xxx.xxx.xxx-xx" />
+            <input type="text" id="Merchant" name="Cpf" placeholder="xxx.xxx.xxx-xx" required/>
             <label for="Merchant">Telefone:</label>
-            <input type="text" id="Merchant" name="Telphone" placeholder="(xx) xxxxx-xxxx" />
+            <input type="text" id="Merchant" name="Telphone" placeholder="(xx) xxxxx-xxxx" required/>
             <label for="Merchant">Chave Pix:</label>
-            <input type="text" id="Merchant" name="Pix-key" placeholder="xxx" />
+            <input type="text" id="Merchant" name="Pix-key" placeholder="xxx" required/>
             <label for="Merchant">Endere&ccedilo de Entrega:</label>
-            <input type="text" id="Merchant" name="Site" placeholder="Av. Example, n xx - Example" />
+            <input type="text" id="Merchant" name="Site" placeholder="Av. Example, n xx - Example" required/>
+            <button type="submit">Enviar</button>
         </form>
     </main>
 </body>
