--- a/deliverer_forms.html
+++ b/deliverer_forms.html
@@ -8,30 +8,24 @@
 </head>
 <body>
     <header>
-        <div><h1>Registro do Entregador</h1></div>
+        <h1>Registro do Entregador</h1>
     </header>
     <main>
         <form>
             <label for="Deliverer">Nome:</label>
             <input type="text" id="Deliverer" name="Name" placeholder="Nome Sobrenome" required/>
-            <label for="Deliverer">
-                Email: <input type="text" id="Deliverer" name="Email" placeholder="example@email.com" required/>
-            </label>
-            <label>
-                CPF: <input type="text" id="Deliverer" name="Cpf" placeholder="xxx.xxx.xxx-x" required/>
-            </label>
-            <label>
-                Telefone: <input type="text" id="Deliverer" name="Telphone" placeholder="(xx) xxxxx-xxxx" required/>
-            </label>
-            <label>
-                Chave Pix: <input type="text" id="Deliverer" name="Pix-key" placeholder="xxx" required/>
-            </label>
-            <label>
-                Placa da Moto: <input type="text" id="Deliverer" name="Bike-plate" placeholder="XXX-0X00" required/>
-            </label>
-            <label>
-                Modelo da Moto: <input type="text" id="Deliverer" name="Bike-model" placeholder="xxx" required/>
-            </label>
+            <label for="Deliverer">Email:</label>
+            <input type="text" id="Deliverer" name="Email" placeholder="example@email.com" required/>
+            <label for="Deliverer">CPF:</label>
+            <input type="text" id="Deliverer" name="Cpf" placeholder="xxx.xxx.xxx-x" required/>
+            <label for="Deliverer">Telefone:</label>
+            <input type="text" id="Deliverer" name="Telphone" placeholder="(xx) xxxxx-xxxx" required/>
+            <label for="Deliverer">Chave Pix:</label>
+            <input type="text" id="Deliverer" name="Pix-key" placeholder="xxx" required/>
+            <label for="Deliverer">Placa da Moto:</label>
+            <input type="text" id="Deliverer" name="Bike-plate" placeholder="XXX-0X00" required/>
+            <label for="Deliverer">Modelo da Moto:</label>
+            <input type="text" id="Deliverer" name="Bike-model" placeholder="xxx" required/>
             <button type="submit">Enviar</button>
         </form>
     </main>
